--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -1,51 +1,6 @@
-.header {
-  padding: 25px 0;
-  position: sticky;
-  z-index: 1;
-  width: 100%;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.main {
-  padding: 25px 0;
-}
-.loaderContainer {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0;
-}
-
-.progressBarContainer {
-  width: 100%;
-  max-width: 400px;
-  height: 10px;
-  background-color: #f3f3f3;
-  border-radius: 5px;
-  overflow: hidden;
-  position: relative;
-}
-
-.progressBar {
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    90deg,
-    #4caf50 25%,
-    #81c784 50%,
-    #4caf50 75%
-  );
-  background-size: 200% 100%;
-  animation: loading 1.5s infinite;
-}
-
-@keyframes loading {
-  from {
-    background-position: 200% 0;
-  }
-  to {
-    background-position: -200% 0;
-  }
+.loading {
+  text-align: center;
+  font-size: 18px;
+  color: #007bff;
+  margin-top: 20px;
 }
